--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       </nav>
     </section>
 
-    <section><h1 class="text-center">Plan a trip to the Zoo!</h1></section>
+    <section class="title">
+      <h1 class="text-center">Plan a trip to the Zoo!</h1>
+    </section>
 
     <!--Animal cards-->
     <section
