--- a/panda.html
+++ b/panda.html
@@ -34,7 +34,7 @@
       <figure>
         <img src="images/Grosser_Panda.JPG" alt="Grosser_Panda" width="500px" />
         <figcaption>
-          By J. Patrick Fischer - Own work
+          By J. Patrick Fischer,
           <a
             href="https://creativecommons.org/licenses/by-sa/3.0"
             title="Creative Commons Attribution-Share Alike 3.0"
