added link to navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="navbar-section">
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1">Michelle's Zoo</span>
+          <a class="navbar-brand" href="#">Michelle's Zoo</a>
         </div>
       </nav>
     </section>
