Changed title of page

--- a/elephant.html
+++ b/elephant.html
@@ -27,7 +27,7 @@
     </section>
 
     <section class="title">
-      <h1 class="text-center">Meet the Panda!</h1>
+      <h1 class="text-center">Meet the Elephant!</h1>
     </section>
 
     <section class="animal_image">
